; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/examples/extr_webpmux.c_WriteData.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/examples/extr_webpmux.c_WriteData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@.str = private unnamed_addr constant [2 x i8] c"-\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@stdout = common dso_local global i32* null, align 8
@stderr = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [36 x i8] c"Error opening output WebP file %s!\0A\00", align 1
@.str.3 = private unnamed_addr constant [24 x i8] c"Error writing file %s!\0A\00", align 1
@.str.4 = private unnamed_addr constant [26 x i8] c"Saved file %s (%d bytes)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.TYPE_3__*)* @WriteData to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @WriteData(i8* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i32 0, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = call i64 @WSTRCMP(i8* %8, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i8*, i8** %4, align 8
  %13 = call i32* @WFOPEN(i8* %12, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  br label %17

14:                                               ; preds = %2
  %15 = load i32*, i32** @stdout, align 8
  %16 = call i32* @ImgIoUtilSetBinaryMode(i32* %15)
  br label %17

17:                                               ; preds = %14, %11
  %18 = phi i32* [ %13, %11 ], [ %16, %14 ]
  store i32* %18, i32** %7, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %26

21:                                               ; preds = %17
  %22 = load i32, i32* @stderr, align 4
  %23 = load i8*, i8** %4, align 8
  %24 = bitcast i8* %23 to i32*
  %25 = call i32 (i32, i8*, i32*, ...) @WFPRINTF(i32 %22, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0), i32* %24)
  store i32 0, i32* %3, align 4
  br label %59

26:                                               ; preds = %17
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i32*, i32** %7, align 8
  %34 = call i32 @fwrite(i32 %29, i64 %32, i32 1, i32* %33)
  %35 = icmp ne i32 %34, 1
  br i1 %35, label %36, label %41

36:                                               ; preds = %26
  %37 = load i32, i32* @stderr, align 4
  %38 = load i8*, i8** %4, align 8
  %39 = bitcast i8* %38 to i32*
  %40 = call i32 (i32, i8*, i32*, ...) @WFPRINTF(i32 %37, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.3, i64 0, i64 0), i32* %39)
  br label %50

41:                                               ; preds = %26
  %42 = load i32, i32* @stderr, align 4
  %43 = load i8*, i8** %4, align 8
  %44 = bitcast i8* %43 to i32*
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = trunc i64 %47 to i32
  %49 = call i32 (i32, i8*, i32*, ...) @WFPRINTF(i32 %42, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0), i32* %44, i32 %48)
  store i32 1, i32* %6, align 4
  br label %50

50:                                               ; preds = %41, %36
  %51 = load i32*, i32** %7, align 8
  %52 = load i32*, i32** @stdout, align 8
  %53 = icmp ne i32* %51, %52
  br i1 %53, label %54, label %57

54:                                               ; preds = %50
  %55 = load i32*, i32** %7, align 8
  %56 = call i32 @fclose(i32* %55)
  br label %57

57:                                               ; preds = %54, %50
  %58 = load i32, i32* %6, align 4
  store i32 %58, i32* %3, align 4
  br label %59

59:                                               ; preds = %57, %21
  %60 = load i32, i32* %3, align 4
  ret i32 %60
}

declare dso_local i64 @WSTRCMP(i8*, i8*) #1

declare dso_local i32* @WFOPEN(i8*, i8*) #1

declare dso_local i32* @ImgIoUtilSetBinaryMode(i32*) #1

declare dso_local i32 @WFPRINTF(i32, i8*, i32*, ...) #1

declare dso_local i32 @fwrite(i32, i64, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
